Add /nodes/<id>/checks
